<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/venue_row_padding"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/venueImage"
        android:layout_width="@dimen/category_icon_size"
        android:layout_height="@dimen/category_icon_size"
        android:scaleType="centerCrop"
        android:tint="@color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/venue_row_margin"
        android:layout_marginEnd="@dimen/venue_row_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/venueName"
            style="@style/HeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/search_hint" />

        <TextView
            android:id="@+id/venueCategory"
            style="@style/SubHeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            tools:text="kkjskjkjsallkjdsaljkslkjlkjkdsaljkdsaljksdlajkasdljkslkdjaasdljklajksdjlksdaklsalkjsadljk" />

        <TextView
            android:id="@+id/venueDistance"
            style="@style/SubHeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_spacing_margin"
            tools:text="@string/search_hint" />

    </LinearLayout>

    <ImageView
        android:id="@+id/venueFavorite"
        android:layout_width="@dimen/favorite_icon_size"
        android:layout_height="@dimen/favorite_icon_size"
        android:layout_gravity="center_vertical"
        android:src="@drawable/empty_star"/>

</LinearLayout>